# fastapi-access-gen

./: pyproject.toml
src/fastapi_access_gen/: generator.py  get_pydantic_models.py  introspector.py
tests/: test.py
tests/test_files/: test_models.py
